@@ -90,11 +90,30 @@
          <short>Whether raising should be a side-effect of other user
                 interactions</short>
          <long>
+           Setting this option to false can lead to buggy behavior, so
+           users are strongly discouraged from changing it from the default
+           of true.
+
            Many actions (e.g. clicking in the client area, moving or resizing the window)
            normally raise the window as a side-effect. Setting this option to false, which
            is strongly discouraged, will decouple raising from other user actions, and
            ignore raise requests generated by applications. See
            http://bugzilla.gnome.org/show_bug.cgi?id=445447#c6.
+           Even when this option is false, windows can
+           still be raised by an alt-left-click anywhere on the window, a
+           normal click on the window decorations, or by special messages
+           from pagers, such as activation requests from tasklist applets.
+           This option is currently disabled in click-to-focus mode.
+
+           Note that the list of ways to raise windows when raise_on_click
+           is false does not include programmatic requests from
+           applications to raise windows; such requests will be ignored
+           regardless of the reason for the request.  If you are an
+           application developer and have a user complaining that your
+           application does not work with this setting disabled, tell them
+           it is _their_ fault for breaking their window manager and that
+           they need to change this option back to true or live with the
+           "bug" they requested.
          </long>
       </locale>
     </schema>
